# Planning-Assistant

./: README.md
be/: .bazelignore  .bazelrc  .editorconfig  .gitignore  .gitlab-ci.yml  BUILD.bazel  GEMINI.md  MODULE.bazel  Makefile  README.md  REPO.bazel  WORKSPACE.bazel  gazelle_python.yaml  go.mod  go.sum  maven_install.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements_lock.txt  requirements_macos.txt  requirements_windows.txt
be/.windsurf/rules/: llms-full.txt
be/agents/: .env.example  AGENTS.md  BUILD.bazel  main.py
be/agents/aggregate/: BUILD.bazel  agent.py
be/agents/api/: BUILD.bazel  common.py  conversation.py  itinerary.py  response.py
be/agents/api/services/: BUILD.bazel  conversation_service.py
be/agents/chat/: .env.example  BUILD.bazel  main.py
be/agents/chat-agent/: BUILD.bazel
be/agents/chat/application/: BUILD.bazel  agent.py  chatbot.py  graph.py  nodes.py  state.py  summarize.py  tools.py
be/agents/chat/application/chat/: BUILD.bazel  nodes.py  summarize.py
be/agents/chat/domain/: BUILD.bazel  constraints.py  entities.py  prompt.py  value_object.py
be/agents/chat/infrastructure/: BUILD.bazel  llm.py  redis.py
be/agents/chat/infrastructure/config/: BUILD.bazel  config.py  logging.py
be/agents/chat/presentation/api/: BUILD.bazel  conversation.py
be/agents/chat/prompt/: BUILD.bazel  prompt.py
be/agents/chat/tests/: BUILD.bazel  test_missing_info.py  test_parse_prompt.py
be/agents/hotel/: BUILD.bazel
be/agents/hotel/application/: BUILD.bazel  graph.py  nodes.py  state.py  tools.py
be/agents/hotel/domain/: BUILD.bazel  constraints.py  entities.py  prompt.py
be/agents/plan/application/: BUILD.bazel  graph.py  nodes.py  state.py  tools.py
be/agents/plan/domain/: BUILD.bazel  constraints.py  prompt.py
be/agents/shared/: BUILD.bazel  models.py  runtime.py  state.py
be/agents/shared/data_stream/: BUILD.bazel  __init__.py  stream.py  stream_parts.py
be/agents/shared/infrastructure/: BUILD.bazel  connection_pool.py  db.py  llm.py
be/agents/shared/infrastructure/config/: BUILD.bazel  __init__.py  logging.py  rate_limit.py  settings.py
be/agents/shared/tools/: BUILD.bazel  __init__.py  search_places.py
be/agents/shared/utils/: BUILD.bazel  __init__.py  bookingcom_api.py  googlemaps_api.py
be/gradle/: BUILD.bazel  libs.versions.toml
be/infra/local/: docker-compose.yml
be/requirements/: BUILD.bazel  all.txt  runtime.txt  test.in
be/scripts/: run_with_env.sh
be/services/accommodation/: .env.example  BUILD.bazel  README.md  main.go
be/services/accommodation/bootstrap/: BUILD.bazel  server.go
be/services/accommodation/internal/application/: BUILD.bazel
be/services/accommodation/internal/application/usecases/: BUILD.bazel  hotel.go
be/services/accommodation/internal/domain/entities/: BUILD.bazel  hotel.go
be/services/accommodation/internal/domain/valueobjects/: BUILD.bazel  vo.go
be/services/accommodation/internal/infrastructure/: BUILD.bazel  modules.go
be/services/accommodation/internal/infrastructure/config/: BUILD.bazel  config.go  logger.go
be/services/accommodation/internal/infrastructure/dtos/: BUILD.bazel  amadeus.go
be/services/accommodation/internal/infrastructure/middlewares/: BUILD.bazel  amadeus_interceptor.go  cors.go
be/services/accommodation/internal/infrastructure/services/: BUILD.bazel  amadeus.go
be/services/accommodation/internal/presentation/: BUILD.bazel  modules.go
be/services/accommodation/internal/presentation/api/: BUILD.bazel  hotel.go  routes.go
be/services/accommodation/pkg/: BUILD.bazel  requests.go  responses.go
be/services/auth/: .env.example  BUILD.bazel  README.md
be/services/auth/src/main/java/com/plango/auth/: AuthApplication.java
be/services/auth/src/main/java/com/plango/auth/config/: AppConfig.java
be/services/auth/src/main/java/com/plango/auth/controller/: AuthController.java  LogController.java  TestAuthController.java
be/services/auth/src/main/java/com/plango/auth/event/: EmailQueueConsumer.java  EmailQueueProducer.java  (+2 more)
be/services/auth/src/main/resources/: .env.properties  application-dev.yml  application-local.yml  application.yml  test.http
be/services/auth/src/main/resources/i18n/: messages.properties
be/services/auth/src/test/java/com/plango/auth/: AuthApplicationTests.java
be/services/user_profile/: .env.example  .gitignore  BUILD.bazel  README.md  main.go
be/services/user_profile/bootstrap/: BUILD.bazel  modules.go  server.go
be/services/user_profile/internal/application/: BUILD.bazel  modules.go
be/services/user_profile/internal/application/usecases/: BUILD.bazel  profile.go  saved.go
be/services/user_profile/internal/domain/entities/: BUILD.bazel  saved.go  user.go
be/services/user_profile/internal/domain/repositories/: BUILD.bazel  saved_repository.go  user_repository.go
be/services/user_profile/internal/domain/valueobjects/: BUILD.bazel  vo.go
be/services/user_profile/internal/infrastructure/: BUILD.bazel  modules.go
be/services/user_profile/internal/infrastructure/config/: BUILD.bazel  config.go
be/services/user_profile/internal/infrastructure/database/: BUILD.bazel  mongo.go
be/services/user_profile/internal/infrastructure/middlewares/: BUILD.bazel  auth.go  cors.go
be/services/user_profile/internal/infrastructure/repositories/: BUILD.bazel  mongo_saved_repository.go  mongo_user_repository.go
be/services/user_profile/internal/infrastructure/services/: BUILD.bazel  gcs.go  profile.go  saved.go
be/services/user_profile/internal/presentation/: BUILD.bazel  modules.go
be/services/user_profile/internal/presentation/api/: BUILD.bazel  profile.go  routes.go  saved.go
be/services/user_profile/pkg/: BUILD.bazel
be/shared/domain/: BUILD.bazel  models.py
be/shared/tools/: BUILD.bazel  search_places.py
be/shared/utils/: BUILD.bazel  serpapi.py
be/tools/: BUILD.bazel  repin.sh  tools.lock.json
be/tools/format/: BUILD.bazel
be/tools/import_bundles/: BUILD.bazel
be/tools/lint/: BUILD.bazel  linters.bzl
be/tools/oci/: BUILD.bazel  go_image.bzl  java_image.bzl  py_image.bzl
(+246 files in other folders)
