"""plango module"""

module(
    name = "plango_monorepo",
    version = "0.0.1",
    compatibility_level = 1,
)

bazel_dep(name = "rules_multirun", version = "0.12.0")
bazel_dep(name = "gazelle", version = "0.44.0")

# rules go
bazel_dep(name = "rules_go", version = "0.55.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@rules_go//go:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_emirpasic_gods",
)

# rules python
bazel_dep(name = "rules_python", version = "1.5.1")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.5.1")
bazel_dep(name = "aspect_rules_py", version = "1.6.1")
bazel_dep(name = "rules_uv", version = "0.84.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.13",
)
use_repo(python, "python_3_13", "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.13",
    requirements_lock = "//:requirements_lock.txt",
    requirements_darwin = "//:requirements_macos.txt",
    requirements_windows = "//:requirements_windows.txt",
)
use_repo(pip, "pypi")
